--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -1,5 +1,6 @@
 {{ 'component-slideshow.css' | asset_url | stylesheet_tag }}
 {{ 'component-slider.css' | asset_url | stylesheet_tag }}
+{{ 'c-compoenent-bar.css' | asset_url |  stylesheet_tag }}
 
 {%- liquid
   assign social_icons = true
