--- a/sections/image-with-text.liquid
+++ b/sections/image-with-text.liquid
@@ -5,6 +5,9 @@
     padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
     padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
   }
+  .section-{{ section.id }}-padding .page-width {
+    padding: 0;
+  }
 
   @media screen and (min-width: 750px) {
     .section-{{ section.id }}-padding {
