--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -27,6 +27,9 @@
     {% endif %}
 
     {% render 'meta-tags' %}
+    {% if template contains 'collection' %}
+    <script src="{{ 'collection-load-more.js.js' | asset_url }}" defer="defer"></script>      
+    {%endif%}
 
     <script src="{{ 'constants.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'pubsub.js' | asset_url }}" defer="defer"></script>
