--- a/sections/collapsible-content.liquid
+++ b/sections/collapsible-content.liquid
@@ -13,6 +13,13 @@
       padding-bottom: {{ section.settings.padding_bottom }}px;
     }
   }
+
+  @media screen and (min-width: 750px) {
+    .section-{{ section.id }}-padding {
+      padding-top: {{ section.settings.padding_top |  times: 0.5}}px;
+      padding-bottom: {{ section.settings.padding_bottom | times: 0.5}}px;
+    }
+  }
 {%- endstyle -%}
 
 <div class="color-{{ section.settings.color_scheme }} gradient">
@@ -85,7 +92,7 @@
                     <h3 class="accordion__title inline-richtext h4">
                       {{ block.settings.heading | default: block.settings.page.title | escape }}
                     </h3>
-                    {{- 'icon-caret.svg' | inline_asset_content -}}
+                    {{- 'icon-caret-down.svg' | inline_asset_content -}}
                   </summary>
                   <div
                     class="accordion__content rte"
@@ -100,6 +107,11 @@
               </div>
             {%- endfor -%}
           </div>
+        </div>
+        <div class="more-read-btn">
+          {% if section.settings.btn_text != blank %}
+            <a href="{{ section.settings.btn_link }}">{{ section.settings.btn_text }}</a>
+          {% endif %}
         </div>
       </div>
     </div>
@@ -284,7 +296,17 @@
       "unit": "px",
       "label": "t:sections.all.padding.padding_bottom",
       "default": 36
-    }
+    },
+    {
+      "type": "text",
+      "id": "btn_text",
+      "label": "Button text"
+    },
+    {
+      "type": "url",
+      "id": "btn_link",
+      "label": "Button link"
+    },
   ],
   "blocks": [
     {
