--- a/assets/component-price.css
+++ b/assets/component-price.css
@@ -75,8 +75,9 @@
 
 .price--on-sale .price__sale {
   display: initial;
-  flex-direction: row;
+  flex-direction: row-reverse;
   flex-wrap: wrap;
+  display: flex;
 }
 
 .price--center {
@@ -87,7 +88,10 @@
 .price--on-sale .price-item--regular {
   text-decoration: line-through;
   color: rgba(var(--color-foreground), 0.75);
-  font-size: 1.3rem;
+  font-family: Inter;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 18px;
 }
 
 .unit-price {
