next product -age

--- a/assets/base.css
+++ b/assets/base.css
@@ -1905,9 +1905,11 @@ input[type='checkbox'] {
 
 /* component-quantity */
 .quantity {
+  width: 140px;
+  height: 35px;
   color: rgba(var(--color-foreground));
   position: relative;
-  width: calc(14rem / var(--font-body-scale) + var(--inputs-border-width) * 2);
+  /* width: calc(14rem / var(--font-body-scale) + var(--inputs-border-width) * 2); */
   display: flex;
   border-radius: var(--inputs-radius);
   min-height: calc((var(--inputs-border-width) * 2) + 4.5rem);
