--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -97,3 +97,27 @@
 .collection__view-all a:not(.link) {
   margin-top: 1rem;
 }
+.load-more_btn {
+    font-family: Inter;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-align: center;
+    padding: 15px 60px;
+    border-radius: 5px;
+    background: transparent;
+    border: 1px solid black;
+    color: black;
+    cursor: pointer !important;
+}
+.load-more_page--text {
+  margin-top: 38px;
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.13px;
+  text-align: center;
+  vertical-align: middle;
+}
