--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -28,7 +28,7 @@
 
     {% render 'meta-tags' %}
     {% if template contains 'collection' %}
-    <script src="{{ 'collection-load-more.js.js' | asset_url }}" defer="defer"></script>      
+    <script src="{{ 'collection-load-more.js' | asset_url }}" defer="defer"></script>      
     {%endif%}
 
     <script src="{{ 'constants.js' | asset_url }}" defer="defer"></script>
