--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -252,7 +252,7 @@ a.product__text {
   text-transform: uppercase;
 }
 
-.product__title {
+.product__title h1{
   word-break: break-word;
   margin-bottom: 1.5rem;
   font-family: Calluna;
@@ -983,7 +983,7 @@ a.product__text {
   }
 
   .thumbnail-list__item.slider__slide {
-    width: calc(33% - 0.6rem);
+    width: calc(20% - 0.6rem);
   }
 }
 
@@ -1503,5 +1503,53 @@ a.product__text {
 
   .recipient-form > input[type='checkbox']:checked + label .icon-checkmark {
     border: none;
+  }
+}
+
+.quantity__button:first-child {
+  border-right: 1px solid #31331D;
+  border-radius:5px 0 ;
+}
+.quantity__button:last-child {
+  border-left: 1px solid #31331D;
+  border-radius:5px 0 ;
+}
+variant-selects label {
+  width: 113px;
+  height: 35px;
+  border-radius: 5px !important;
+}
+
+@media (max-width: 1024px) {
+  .product {
+    padding: 0;
+  }
+  .product--large:not(.product--no-media) .product__info-wrapper {
+    padding-left: 20px;
+  }
+}
+
+@media (max-width: 440px) {
+  slider-component .slider-button {
+    display: none;
+  }
+  .grid--peek.slider .grid__item:first-of-type {
+    margin-left: 0;
+  }
+  .grid--peek.slider--mobile .grid__item {
+    width: 100%;
+  }
+  .grid--peek.slider--mobile .grid__item div {
+    margin: 0;
+    width: 100%;
+  }
+  .thumbnail.global-media-settings img {
+    border-radius: 10px;
+  }
+  .product__media-list .media>* {
+    border-radius: 10px;
+  }
+  .product--large:not(.product--no-media) .product__info-wrapper {
+    padding-left: 0;
   }
 }
